Replace manual Profiler#start call with annotation injection + set retention policies to source + updat readme